[gd_scene load_steps=3 format=3 uid="uid://b2tja0xrs2kni"]

[ext_resource type="Script" path="res://UI/Menu/main_menu.gd" id="1_1kbif"]
[ext_resource type="PackedScene" uid="uid://bekvl4ptfvpxq" path="res://UI/Menu/settings_menu.tscn" id="2_mjm8a"]

[node name="main_menu" type="CanvasLayer"]
process_mode = 3
follow_viewport_enabled = true
script = ExtResource("1_1kbif")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "CHICKEN CHASER!"
horizontal_alignment = 1

[node name="NewGameButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "New Game"

[node name="SettingsButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Settings"

[node name="QuitButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Quit"

[node name="settings_menu" parent="." instance=ExtResource("2_mjm8a")]
visible = false

[node name="SFXSlider" parent="settings_menu/SettingsMenu/MarginContainer/VBoxContainer/GridContainer" index="3"]
size_flags_horizontal = 1

[connection signal="pressed" from="Control/VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="settings_menu/SettingsMenu/MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]

[editable path="settings_menu"]
